@@ -16,6 +16,7 @@ TestInstallDepend
 """
 import unittest
 import json
+from pprint import pprint
 
 from test.base_code.read_data_base import ReadTestBase
 from packageship.application.apps.package.function.constants import ResponseCode
@@ -37,7 +38,7 @@ class TestInstallDepend(ReadTestBase):
         Initialization failed. No database was generated. Database information could not be found
         Returns:
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": "A1"})
+        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": ["A1"]})
 
         self.without_dbs_folder(self.REQUESTS_KWARGS, met=self, code=ResponseCode.NOT_FOUND_DATABASE_INFO)
         self.when_db_no_content(self.REQUESTS_KWARGS, met=self, code=ResponseCode.NOT_FOUND_DATABASE_INFO)
@@ -50,13 +51,23 @@ class TestInstallDepend(ReadTestBase):
         """
         param_error_list = [
             "{}",
-            json.dumps({"binaryName": ""}),
-            json.dumps({"binaryName": "dsd" * 200}),
-            json.dumps({"binaryName": 0}),
+            json.dumps({"binaryName": "",
+                        "level": "1"}),
+            json.dumps({"binaryName": "dsd" * 200,
+                        "level": "1"}),
+            json.dumps({"binaryName": 0,
+                        "level": "1"}),
             json.dumps({"binaryName": "CUnit",
-                        "db_list": [12, 3, 4]}),
-            json.dumps({"binaryName": "CUnit",
-                        "db_list": "xxxxx"}),
+                        "db_list": [12, 3, 4],
+                        "level": "1"}),
+            json.dumps({"binaryName": ["CUnit"],
+                        "db_list": "xxxxx",
+                        "level": "1"}),
+            json.dumps({"binaryName": ["CUnit"],
+                        "level": "a"}),
+            json.dumps({"binaryName": ["CUnit"],
+                        "level": "-2"}),
+
         ]
 
         for error_param in param_error_list:
@@ -71,7 +82,7 @@ class TestInstallDepend(ReadTestBase):
         Returns:
 
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": "qitiandasheng"})
+        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": ["qitiandasheng"]})
         resp_dict = self.client_request(**self.REQUESTS_KWARGS)
 
         self.response_json_error_judge(resp_dict, resp_code=ResponseCode.PACK_NAME_NOT_FOUND, method=self)
@@ -82,7 +93,7 @@ class TestInstallDepend(ReadTestBase):
         Returns:
 
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": "CUnit",
+        self.REQUESTS_KWARGS["data"] = json.dumps({"binaryName": ["CUnit"],
                                                    "db_list": ["shifu", "bajie"]
                                                    })
 
