@@ -1,3 +1,6 @@
+* Mon Nov 30 2020 Shenmei Tu <tushenmei@huawei.com>
+- Add level and batch query for install depend interface
+
 * Sat Nov 30 2020 Pengju Jiang <jiangpengju2@huawei.com>
 - Modify the address of the database after successful initialization
 
